Add the ability to select a project, and pass the ID to the react children.

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -20,3 +20,13 @@ body {
     overflow-x: auto;
     font-size: small;
 }
+
+.chat-text-input {
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+}
+
+.clickable {
+    cursor: pointer;
+    user-select: none;
+}
